5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1674_1102.log
== TEST (2019-05-01 14:52:52) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque": ))
r = float(input("raio: "))

print("Entradas: ",H , h , r )
-- ERROR:
File "XXXX", line 9
    h = float(input("nivel de combustivel no tanque": ))
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:53:11) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas: ",H , h , r )
-- OUTPUT:
Entradas:  11.3 5.7 2.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:53:53) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:"","H "","" h "","" r )
-- ERROR:
File "XXXX", line 12
    print("Entradas:"","H "","" h "","" r )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:54:21) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H "","" h "","" r )
-- ERROR:
File "XXXX", line 12
    print("Entradas:", H "","" h "","" r )
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:54:44) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H "," h "," r )
-- ERROR:
File "XXXX", line 12
    print("Entradas:", H "," h "," r )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:54:59) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ",", h, "," r )
-- ERROR:
File "XXXX", line 12
    print("Entradas:", H ",", h, "," r )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:55:32) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:07:28) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)
		
print(vc, ve , vca)
-- ERROR:
File "XXXX", line 18
    print(vc, ve , vca)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:07:47) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)
		
	print(vc, ve , vca)
-- ERROR:
File "XXXX", line 18
    print(vc, ve , vca)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:05) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)
		
	print(vc ve  vca,)
-- ERROR:
File "XXXX", line 18
    print(vc ve  vca,)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:24) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)
		
	print(vc ve  vca)
-- ERROR:
File "XXXX", line 18
    print(vc ve  vca)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:28) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)
		
print(vc ve  vca)
-- ERROR:
File "XXXX", line 18
    print(vc ve  vca)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:34) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)
		
print(vc)
-- ERROR:
File "XXXX", line 18
    print(vc)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:42) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)
		

-- ERROR:
File "XXXX", line 18
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:51) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca =((pi/3)*(H**2)*(3*r - H)

-- ERROR:
File "XXXX", line 17
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:09:23) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca = ((pi/3)*(H**2)*(3*r - H)

print(vc)
-- ERROR:
File "XXXX", line 18
    print(vc)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:09:41) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*r**3
vca = ((pi/3)*(H**2)*(3*r - H)

print(vc+ve)
-- ERROR:
File "XXXX", line 18
    print(vc+ve)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:10:13) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)

print(vc+ve)
-- ERROR:
File "XXXX", line 13
    print(vc+ve)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:12:05) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))


vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)

print(vc+ve)
-- ERROR:
File "XXXX", line 12
    print(vc+ve)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:13:05) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:18:57) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)

if(H<0) or (h<0) or (r<0)
	print("Entradas invalidas")
else:
	if:(H<h) and (h<(2*r))
	print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 14
    print("Entradas invalidas")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:19:14) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)

if(H<0) or (h<0) or (r<0):
	print("Entradas invalidas")
else:
	if:(H<h) and (h<(2*r)):
		print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 13
    if(H<0) or (h<0) or (r<0):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:19:32) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)

if (H<0) or (h<0) or (r<0):
	print("Entradas invalidas")
else:
	if (H<h) and (h<(2*r)):
		print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 13
    if (H<0) or (h<0) or (r<0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:20:05) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (h<(2*r)):
		print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 13
    if (H<0) or (h<0) or (r<0) :
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:20:44) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = (pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2)*(3*r - H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (h<(2*r)):
		print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 13
    if (H<0) or (h<0) or (r<0) :
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:20:54) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )


if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (h<(2*r)):
		print("Entradas invalidas")
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:09:19) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = ((pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2))*(3*r - H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h):
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 10
    ve = (4/3)*(pi)*(r**3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:09:32) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = ((pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2))*(3*r - H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h)
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 10
    ve = (4/3)*(pi)*(r**3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:10:54) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

vc = ((pi)*(r**2)*(H)
ve = (4/3)*(pi)*(r**3)
vca = ((pi/3)*(H**2))*(3*r - H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h)
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 10
    ve = (4/3)*(pi)*(r**3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:12:15) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

v1 = ((pi)*(r**2)*(H)
v2 = (4/3)*(pi)*(r**3)
v3 = ((pi/3)*(H**2))*(3*r - H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h)
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 10
    v2 = (4/3)*(pi)*(r**3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:12:58) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

v1 = ((pi)*(r**2)*(H)

v3 = ((pi/3)*(H**2))*(3*r - H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h)
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 11
    v3 = ((pi/3)*(H**2))*(3*r - H)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:13:07) 
-- CODE:
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

v1 = ((pi)*(r**2)*(H)



if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h)
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 13
    if (H<0) or (h<0) or (r<0) :
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:13:48) 
-- CODE:

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

from math import*

v1 = ((pi)*(r**2)*(H)

if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h)
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 12
    if (H<0) or (h<0) or (r<0) :
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:14:06) 
-- CODE:

H = float(input("altura do tanque: "))
h = float(input("nivel de combustivel no tanque: "))
r = float(input("raio: "))

print("Entradas:", H ,",", h, ",", r )

from math import*



if (H<0) or (h<0) or (r<0) :
	print("Entradas invalidas")
else:
	if (H<h) and (H<(2*r)):
		print("Entradas invalidas")
	else:
		if(H>h)
			print("Volume:", (round(vc+ve), 3) )
-- ERROR:
File "XXXX", line 18
    if(H>h)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
